user-deployment.yaml
apiVersion: apps/v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    labels:
      app: ro-user-service
    name: ro-user-deployment
    namespace: default
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: ro-user-service
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ro-user-service
      spec:
        containers:
        - image: 855430746673.dkr.ecr.us-east-1.amazonaws.com/matt-oberlies-00000916-ro-user:latest
          imagePullPolicy: Always
          name: ro-user-service
          ports:
          - containerPort: 8081
            protocol: TCP
          resources: {}
          terminationMessagePath: /root/.m2/repository/com/revature/userservice/ro-user-termination-log
          terminationMessagePolicy: File
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
---
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ro-user-service
    name: ro-user-service
    namespace: default
  spec:
    ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      app: ro-user-service
    type: ClusterIP
kind: List
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ro-user-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ngnix.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /user(.+)
        backend:
          serviceName: ro-user-service
          servicePort: 8081
